{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 110,
  "lineage": "caebc4a7-b8af-30ef-0086-459c3f530d72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05fe1e45139429ae8",
            "association_id": "eipassoc-03a331ee2eb5f7390",
            "domain": "vpc",
            "id": "eipalloc-05fe1e45139429ae8",
            "instance": "i-0edbe28bc1d7a3733",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0f19d32ade046d6f3",
            "private_dns": "ip-172-16-10-100.eu-central-1.compute.internal",
            "private_ip": "172.16.10.100",
            "public_dns": "ec2-35-157-247-143.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.157.247.143",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2",
            "aws_key_pair.root",
            "aws_network_interface.nic",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087924c9e0410af37",
            "arn": "arn:aws:ec2:eu-central-1:584871003262:instance/i-0edbe28bc1d7a3733",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0edbe28bc1d7a3733",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "termite-cloud-infrastructure-root-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f19d32ade046d6f3"
              }
            ],
            "primary_network_interface_id": "eni-0f19d32ade046d6f3",
            "private_dns": "ip-172-16-10-100.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "termite-cloud-infrastructure"
                },
                "throughput": 125,
                "volume_id": "vol-087f43e872b0b37fa",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06dc52f237925103e",
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04c020f2ce4319867"
            ]
          },
          "dependencies": [
            "aws_key_pair.root",
            "aws_network_interface.nic",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:internet-gateway/igw-098454a4efb37987c",
            "id": "igw-098454a4efb37987c",
            "owner_id": "584871003262",
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            },
            "vpc_id": "vpc-0a30140642541e046"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:network-interface/eni-0f19d32ade046d6f3",
            "id": "eni-0f19d32ade046d6f3",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:5a:74:10:56:bc",
            "owner_id": "584871003262",
            "private_ip": "172.16.10.100",
            "private_ip_list": [
              "172.16.10.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.10.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04c020f2ce4319867"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06dc52f237925103e",
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            }
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:route-table/rtb-05cd6f98d026eb67a",
            "id": "rtb-05cd6f98d026eb67a",
            "owner_id": "584871003262",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-098454a4efb37987c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a30140642541e046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tch_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09757d930918da97d",
            "route_table_id": "rtb-05cd6f98d026eb67a",
            "subnet_id": "subnet-06dc52f237925103e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main_rt",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:security-group/sg-04c020f2ce4319867",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c020f2ce4319867",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "584871003262",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a30140642541e046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:subnet/subnet-06dc52f237925103e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dc52f237925103e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "584871003262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            },
            "vpc_id": "vpc-0a30140642541e046"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:vpc/vpc-0a30140642541e046",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0488177052c0004a7",
            "default_route_table_id": "rtb-030de1c3153c7f260",
            "default_security_group_id": "sg-0ab0f44056f180966",
            "dhcp_options_id": "dopt-0d918768184a27df4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a30140642541e046",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030de1c3153c7f260",
            "owner_id": "584871003262",
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            }
          }
        }
      ]
    }
  ]
}